Bug 1900211 - Re-implement addresscollection. r=john.bieling

We'd always call the collectSingleAddress now.
I removed collection of chat screennames, all of which are defunct now anyways.
The old code did was pointlessly complicated. This new code is also much faster than the old code (10x to 100x depending on how many addresss)
For 50k emails I get 0.02692ms per email. Old code choked a bit on that many, but for 5k emails I got 2.9834ms per email

Differential Revision: https://phabricator.services.mozilla.com/D230992