mailnews/compose/src/MessageSend.sys.mjs
@@ -6,6 +6,7 @@ import { MailServices } from "resource:///modules/MailServices.sys.mjs";
 
 const lazy = {};
 ChromeUtils.defineESModuleGetters(lazy, {
+  collectSingleAddress: "resource:///modules/AddressCollector.sys.mjs",
   MailUtils: "resource:///modules/MailUtils.sys.mjs",
   MimeMessage: "resource:///modules/MimeMessage.sys.mjs",
   MsgUtils: "resource:///modules/MimeMessageUtils.sys.mjs",
@@ -1252,9 +1253,6 @@ export class MessageSend {
       "mail.collect_email_address_outgoing",
       false
     );
-    const addressCollector = Cc[
-      "@mozilla.org/addressbook/services/addressCollector;1"
-    ].getService(Ci.nsIAbAddressCollector);
 
     for (const addr of addresses) {
       let displayName = addr.name;
@@ -1267,11 +1265,7 @@ export class MessageSend {
       ) {
         displayName = "";
       }
-      addressCollector.collectSingleAddress(
-        addr.email,
-        displayName,
-        createCard
-      );
+      lazy.collectSingleAddress(addr.email, displayName, createCard);
     }
   }
 
